<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">SuperApp</string>
    <string name="THP_TundraOffc">fonts/THP_TundraOffc.ttf</string>
    <string name="THP_TundraOffc_Bold">fonts/THP_TundraOffc-Bold.ttf</string>
    <string name="THP_TundraOffc_BoldItalic">fonts/THP_TundraOffc-BoldItalic.ttf</string>
    <string name="THP_TundraOffc_Italic">fonts/THP_TundraOffc-Italic.ttf</string>
    <string name="THP_FiraSans_Bold">fonts/Lato-Bold.ttf</string>
    <string name="THP_FiraSans_Regular">fonts/Lato-Regular.ttf</string>
    <string name="THP_FiraSans_SemiBold">fonts/Lato-SemiBold.ttf</string>
    <string name="Rs">\u20B9</string>
    <string name="hint_registered_mobile_number"><font size="30">My hint string</font></string>
    <string name="type_device">Default Device</string>
    <string name="title_activity_maps">Map</string>
    <string name="something_went_wrong">Oops! Something went wrong.\nPlease try after sometime.</string>
    <string name="please_check_ur_connectivity">Please check your internet connectivity.</string>
    <string name="connectivity_try_again">Please check your internet connectivity and\n Try Again</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="try_again">Could not load the data.\n Tap to retry</string>
    <string name="article_not_loaded">Clicked link\'s article is not loaded.\nPlease check your internet connectivity.</string>
    <string name="please_wait">Please wait...</string>
    <string name="kindly">Kindly!</string>
    <string name="alert">Alert!</string>
    <string name="passwd_length_err_msg">Password length must be greater than or equal to 5.</string>
    <string name="passwd_char_err_msg">Password should contain atleast 1 number and 1 alphabet. No special characters allowed.</string>
    <string name="all_field_mandatory">All fields are mandatory.</string>
    <string name="comments">COMMENTS</string>
    <string name="language_not_available">Language is not available.</string>
    <string name="language_missing_data">Language is not downloaded. Please download from Google TTS voice data.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_preference">Please select preference.</string>
    <string name="api_create_subscription_failure_message">We are unable to confirm your payment due to some technical issues. Please wait for 30 minutes for the confirmation.</string>
    <string name="api_create_subscription_failure_title">Payment Failure</string>
    <string name="api_create_subscription_success_message">Purchase was successful. Enjoy!</string>
    <string name="api_create_subscription_success_title">Payment confirmed</string>
    <string name="facebook_app_id">467175884091779</string>
    <string name="fb_login_protocol_scheme">fb467175884091779</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Needed to get current location</string>
    <string name="permission_location">Location permission is denied</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed to get current location.</string>
    <string name="location_not_enabled">It seems your location service is disabled. Please enable from your device settings.</string>
    <string name="settings">Settings</string>
    <string name="youtube_api_key">AIzaSyBENdg9kEoEsb8WrOWIUk7cS0HPgU0BztQ</string>
    <string name="users_from_outside_india">Users from outside India, please provide email address</string>
    <string name="toast_otp_verified">OTP verified</string>
    <string name="set_preference">Set Preferences</string>
    <string name="primary_address">Set Primary Address</string>
    <string name="empty_fields">Empty fields!</string>
    <string name="address_updated">Address updated successfully</string>
    <string name="pincode_error">Pincode error!</string>
    <string name="password_reset_success">Password reset successfully.</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_confirm_signout">Are you sure?</string>
    <string name="text_days_left">%d days left</string>
    <string name="item_removed_message">Show fewer stories like this.</string>
    <string name="undo">Undo</string>
    <string name="please_enter_valid">Please enter your Mobile Number/Email Address</string>
    <string name="please_enter_password">Please enter your Password</string>
    <string name="please_enter__new_password">Please enter New Password</string>
    <string name="password_constraints"><![CDATA[Password must contain a minimum of 5 characters and a maximum of 20. Use a mix of letters, numbers & symbols for better password strength]]></string>
    <string name="clear_all">Clear All</string>
    <string name="text_confirm_clear_all">Are you sure?</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="active">Active</string>
    <string name="expired">Expired</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="yet_to_active">Yet to Active</string>
    <string name="CLEVERTAP_AC_ID">TEST-Z8W-R8K-465Z</string>
    <string name="CLEVERTAP_TOKEN" tools:ignore="TypographyDashes">TEST-3b2-0b1</string>
    <string name="CLEVERTAP_ACCOUNT_ID_LIVE">W8W-R8K-465Z</string>
    <string name="CLEVERTAP_ACCOUNT_TOKEN_LIVE" tools:ignore="TypographyDashes">3b2-0b0</string>
    <string name="default_notification_channel_id" translatable="false">TheHindu</string>
    <string name="alpha_detail">1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_home_explore">Explore Section</string>
    <string name="info_widget_viewall">VIEW ALL</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="ga_forex_screen">Forex Screen</string>
    <string name="ga_initial_setup_screen">Initial Setup Screen</string>
    <string name="ga_overlay_screen">Overlay Screen</string>
    <string name="ga_sidebar_category">Navigation Drawer</string>
    <string name="ga_post_comment">Post comment Screen</string>
    <string name="ga_splash_screen">Splash Screen</string>
    <string name="ga_home">Home Screen</string>
    <string name="ga_action">Action</string>
    <string name="ga_action_button_click">Button Click</string>
    <string name="ga_action_image_click">Image Click</string>
    <string name="ga_article_detail_lebel">Article Detail Screen</string>
    <string name="ga_section_listing_label">Section Screen</string>
    <string name="ga_bookmark_screen_button_clicked">Bookmark icon click</string>
    <string name="ga_bookmark_article_button_clicked">Article detail: Bookmark button clicked</string>
    <string name="ga_bookmark_read_later_button_clicked">Read later: Bookmark button clicked</string>
    <string name="ga_article_back_button_clicked">Article detail: Back button clicked</string>
    <string name="ga_article_share_button_clicked">Article detail: Share button clicked</string>
    <string name="ga_article_audio_button_clicked">Article detail: Audio button clicked</string>
    <string name="ga_section_share_button_clicked">Section: Share button clicked</string>
    <string name="ga_article_text_button_clicked">Article detail: Font Size button clicked</string>
    <string name="ga_article_comment_button_clicked">Article detail: Comments button clicked</string>
    <string name="ga_article_postcomment_button_clicked">Article detail: Post comment button clicked</string>
    <string name="ga_article_video_button_clicked">Article detail: Video button clicked</string>
    <string name="ga_article_main_image_clicked">Article detail: Article image clicked</string>
    <string name="ga_article_taboola_organic_clicked">Article detail: Taboola Organic Hindu article clicked</string>
    <string name="ga_article_taboola_nonorganic_clicked">Article detail: Taboola Non Organic article clicked</string>
    <string name="ga_article_taboola_home_organic_clicked">Home: Taboola Organic Hindu article clicked</string>
    <string name="ga_article_taboola_section_organic_clicked">Section: Taboola Organic Hindu article clicked</string>
    <string name="ga_article_taboola_home_nonorganic_clicked">Home: Taboola Non Organic article clicked</string>
    <string name="ga_article_taboola_section_nonorganic_clicked">Section: Taboola Non Organic article clicked</string>
    <string name="setting_menu">Settings</string>
    <string name="clear_all_menu"></string>
    <string name="share_app_menu">Share this app</string>
    <string name="custom_home_screen">Personalise Home Screen</string>
    <string name="custom_local_screen">Localise Home Screen</string>
    <string name="intital_setup_customize">Personalise app</string>
    <string name="intital_setup_localize">Localise app</string>
    <string name="intital_setup_customize_info">We will show more news from topics you choose in the Home Screen</string>
    <string name="intital_setup_localize_info">Select the regional news you would like to read in the Home Screen</string>
    <string name="inital_setup_head_info">Select your favourite topics to see more stories you like on your Home Screen</string>
    <string name="select_atleast_five_section">You need to select atleast 5 sections</string>
    <string name="info_article_size">Article Font Size</string>
    <string name="info_location">Detect Location</string>
    <string name="info_mode">Night Mode</string>
    <string name="info_push_notification">Push Notification</string>
    <string name="info_turn_off_image">Turn off Images</string>
    <string name="info_article_small">Small</string>
    <string name="info_article_large">Large</string>
    <string name="info_article_medium">Medium</string>
    <string name="info_article_xlarge">Extra Large</string>
    <string name="info_article_s">S</string>
    <string name="info_article_m">M</string>
    <string name="info_article_l">L</string>
    <string name="info_article_xl">XL</string>
    <string name="read_aloud">Read Aloud</string>
    <string name="info_no_notifications">We don\'t have any notifications for you now</string>
    <string name="info_unread_notifications">You have some unread articles in read later</string>
    <string name="title_notifications">Notifications</string>
    <string name="taboola_pub">thehindu-hinduappandroid</string>
    <string name="taboola_mode">thumbnails-a</string>
    <string name="taboola_pagetype">article</string>
    <string name="taboola_placement">Below Article Thumbnails</string>
    <string name="dark_taboola_placement">Below Article Thumbnails Dark</string>
    <string name="taboola_targetype">mix</string>
    <string name="taboola_publisher_id" translatable="false">thehindu-hinduappandroid</string>
    <string name="taboola_publisher_apikey" translatable="false">65e50cbad5e7e156f110d188630a733c8054f54b</string>
    <string name="taboola_placement_home" translatable="false">Below Home Stream</string>
    <string name="taboola_placement_home_source_type" translatable="false">home</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="currency_inr">Currency (INR)</string>
    <string name="tt_selling">TT\nSelling</string>
    <string name="tt_buying">TT\nBuying</string>
    <string name="bill_selling">BILL\nSelling</string>
    <string name="bill_buying">BILL\nBuying</string>
</resources>