<com.ns.view.layout.NSRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layoutType="Black_Dark">

    <com.ns.view.layout.NSLinearLayout
        android:id="@+id/selectTopicFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutType="Black_Dark">

        <com.ns.view.text.CustomTextView
            android:id="@+id/selectTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_home_widget_background"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:text="@string/intital_setup_customize"
            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold"
            app:font_path="@string/THP_FiraSans_Bold"
            app:textColor="@color/color_custom_header_text" />

        <com.ns.view.text.ArticleTitleTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/inital_setup_head_info"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:font_path="@string/THP_FiraSans_Regular" />
    </com.ns.view.layout.NSLinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/selectTopicFrame"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="none">

        <com.ns.view.flowlayout.TagFlowLayout
            android:id="@+id/id_flowlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:gravity="left"
            app:max_select="-1"
            app:paddingEnd="10dp"
            app:paddingStart="10dp" />
    </ScrollView>
</com.ns.view.layout.NSRelativeLayout>