<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/currentPlanLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/subscription_pack_width"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/subscription_pack_item_gap"
    android:padding="@dimen/subscription_pack_item_border_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemContentMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_current_plan"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:elevation="10dp">

        <com.ns.view.text.CustomTextView
            android:id="@+id/packName_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1"
            android:text="No Active Plan"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:font_path="@string/THP_TundraOffc_Bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ns.view.text.CustomTextView
            android:id="@+id/planValidity_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="0 days validity"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:font_path="@string/THP_FiraSans_Regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/packName_Txt" />

        <LinearLayout
            android:id="@+id/currencyLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planValidity_Txt">

            <com.ns.view.text.CustomTextView
                android:id="@+id/dayLeftTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:text="00"
                android:textColor="#ffffff"
                android:textSize="38sp"
                app:font_path="@string/THP_TundraOffc_Bold" />

            <com.ns.view.text.CustomTextView
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:text="days left"
                android:alpha="0.7"
                android:gravity="bottom"
                android:maxLines="2"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:font_path="@string/THP_TundraOffc" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/status_Image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/subscribe_plan_btn_margintop"
            app:srcCompat="@drawable/ic_cross_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencyLayout"/>

        <com.ns.view.text.CustomTextView
            android:id="@+id/status_Txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="@dimen/subscribe_plan_btn_margintop"
            android:paddingBottom="8dp"
            android:text="@string/expired"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:font_path="@string/THP_FiraSans_Regular"
            app:layout_constraintTop_toBottomOf="@+id/currencyLayout"
            app:layout_constraintLeft_toRightOf="@id/status_Image"/>

        <com.ns.view.text.CustomTextView
            android:id="@+id/button_SubscribeNow"
            style="@style/btnTextStyleWhiteBG"
            android:background="@drawable/white_backgraoud_oval"
            android:gravity="center"
            android:maxLines="1"
            android:visibility="visible"
            android:text="@string/purchase_now"
            android:layout_marginTop="20dp"
            app:font_path="@string/THP_FiraSans_SemiBold"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_Txt"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>