<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:layout_marginStart="@dimen/bl_item_margin_left"
    
    android:layout_marginEnd="@dimen/bl_item_margin_right"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/widget_paddingBottom"
        android:paddingTop="@dimen/widget_paddingTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/banner_title_margin"
            android:orientation="horizontal">

            <View
                android:layout_width="14dp"
                android:layout_height="11dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_section_marker" />

            <com.ns.view.text.ArticleTitleTextView
                android:id="@+id/textview_widget_title"
                app:font_path="@string/THP_FiraSans_SemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_widgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_paddingBottom" />

        <com.ns.view.text.ArticleTitleTextView
            android:id="@+id/textview_widget_viewAll"
            app:font_path="@string/THP_FiraSans_Regular"
            app:textType="L"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/widget_paddingTop"
            android:drawableRight="@drawable/back_more_from"
            android:gravity="center_vertical"
            android:text="@string/info_widget_viewall"
            android:textAllCaps="true"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>